--- a/client/src/App.css
+++ b/client/src/App.css
@@ -38,7 +38,8 @@
 }
 
 .accordion-button {
-  font-size:30px;
+  font-size:20px;
+  font-style:normal;
   background-color: rgb(219, 219, 219) !important;
 }
 
