change background color for menu

--- a/client/src/styles/bootstrap-theme.scss
+++ b/client/src/styles/bootstrap-theme.scss
@@ -31,7 +31,7 @@ a,
     color: $body-color;
     border-color: transparent;
     border-bottom-color: $primary;
-    background-color: #2cc799 !important;
+    background-color: #a0ade6 !important;
       color: #333c4e !important;
     
       button {
