--- a/client/src/styles/overrides.scss
+++ b/client/src/styles/overrides.scss
@@ -32,8 +32,8 @@ div svg path {
 
 .tooltip{
   position: absolute;
-  background-color: aqua;
-  border: 1px solid black;
+  background-color: rgb(245, 247, 247);
+  border: 1px solid ;
   border-radius: 5px;
   pointer-events:none;
 }
