add X Y test data and make the check box work

--- a/client/src/styles/overrides.scss
+++ b/client/src/styles/overrides.scss
@@ -21,10 +21,10 @@ div svg path {
   /* stroke-width: 0px; */
   position: absolute;
 }
- div svg path:hover {
-  //  fill: aqua;
-  opacity: 1;
- }
+//  div svg path:hover {
+//   //  fill: aqua;
+//     //opacity: 1;
+//  }
 
 .bar{
   fill: steelblue;
