use plotly to create single chromosome

--- a/client/src/modules/components/summaryChart/CNV/css/circos.css
+++ b/client/src/modules/components/summaryChart/CNV/css/circos.css
@@ -46,7 +46,7 @@
     width: 800px;
     height: 800px;
     top: 100;
-    right: 0;
+    right: 1%;
     bottom: 10;
-    left: 5;
+    left: 10%;
 }
