improve reset button for optional fields;adjust the compare figure position

--- a/client/src/modules/home/home.scss
+++ b/client/src/modules/home/home.scss
@@ -20,6 +20,7 @@ a {
 .card {
   position: inherit !important;
   min-width: 300px !important;
+  border: 0ch;
 }
 .card-example {
   -webkit-overflow-scrolling: touch;
