--- a/client/src/styles/bootstrap-theme.scss
+++ b/client/src/styles/bootstrap-theme.scss
@@ -7,6 +7,10 @@ a,
   height: 100vh;
 }
 
+body {
+  font-family: "Inter", $font-family-sans-serif;
+}
+
 @mixin nav-link {
   border-top: 3px solid transparent;
   border-bottom: 3px solid transparent;
@@ -16,7 +20,7 @@ a,
   text-decoration: none;
   transition: all 0.1s;
   background-color: transparent;
-  font-weight: 500;
+ // font-weight: 500;
   font-size: 15px !important;
   padding-left: 1rem;
   padding-right: 1rem;
@@ -31,8 +35,8 @@ a,
     color: $body-color;
     border-color: transparent;
     border-bottom-color: $primary;
-    background-color: #a0ade6 !important;
-      color: #333c4e !important;
+    background-color: transparent;//#a0ade6 !important;
+    color: #333c4e !important;
     
       button {
         background-color: white !important;
