--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -3,3 +3,4 @@
 @import "~bootstrap-icons/font/bootstrap-icons.css";
 @import "./bootstrap-theme.scss";
 @import "./overrides.scss";
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap");
