add loading message for summary circle plot

--- a/client/src/modules/components/summaryChart/CNV/css/circos.css
+++ b/client/src/modules/components/summaryChart/CNV/css/circos.css
@@ -145,3 +145,12 @@
     top: 100px;
     left: 80%;
 }
+
+.compareContainer{
+    display: flex;
+    flex-direction: column;
+
+}
+.tableRow{
+    flex-grow: 1;
+}
