adjust the plot size, make the height dynamic

--- a/client/src/modules/components/summaryChart/CNV/css/circos.css
+++ b/client/src/modules/components/summaryChart/CNV/css/circos.css
@@ -177,6 +177,8 @@
     flex-direction: column;
     overflow:auto;
     overflow-x: hidden;
+    align-items: stretch;
+    flex-grow: 1;
 }
 .tableRow{
     flex-grow: 1;
