--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -2,5 +2,7 @@
 @import "~bootstrap/scss/bootstrap";
 @import "~bootstrap-icons/font/bootstrap-icons.css";
 @import "./bootstrap-theme.scss";
+@import "~swagger-ui-react/swagger-ui.css";
+@import "./swagger-ui.theme.scss";
 @import "./overrides.scss";
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap");
