make backgroud image scroll

--- a/client/src/modules/home/home.scss
+++ b/client/src/modules/home/home.scss
@@ -14,7 +14,7 @@
 }
 
 .cover-image {
-  background-attachment: fixed;
+  background-attachment: scroll;
     background-position: 50%;
     background-repeat: no-repeat;
     background-size:cover;
