change advanced setting panel

--- a/client/src/modules/home/home.scss
+++ b/client/src/modules/home/home.scss
@@ -17,7 +17,7 @@
   background-attachment: local;
     background-position: 50%;
     background-repeat: no-repeat;
-    background-size:contain;
+    background-size:cover;
 }
 
 a {
