--- a/client/src/styles/overrides.scss
+++ b/client/src/styles/overrides.scss
@@ -47,16 +47,33 @@ div svg path {
 
 
 .accordion-item {
-  --bs-accordion-border-color: rgb(198, 214, 233)
+  --bs-accordion-border-color: none
+}
+.accordion-body {
+  background-color: rgb(248, 248, 248) !important;
+    ;
+}
+.accordion-header{
+  background-color:#ffffff;
 }
 .accordion-button{
-  background-color: rgb(220, 230, 243);
+  background-color: rgb(255, 255, 255)!important;;
   background-image:none;
+  font-size: small;
+  padding: 0 0;
 }
+.accordion-button::before {
+  content: "+";
+}
+
+.accordion-button[aria-expanded="true"]::before {
+  content: "-";
+  background-color: rgb(255, 255, 255);
+}
+
 .accordion-button::after {
   background-image: none;
 }
 .accordion-button:not(.collapsed)::after {
- 
   background-image: none;
 }
