add gene/snp responsive

--- a/client/src/modules/components/summaryChart/CNV/css/circos.css
+++ b/client/src/modules/components/summaryChart/CNV/css/circos.css
@@ -175,10 +175,11 @@
 .compareContainer{
     display: flex;
     flex-direction: column;
-    overflow:auto;
+    overflow-y:hidden;
     overflow-x: hidden;
     align-items: stretch;
     flex-grow: 1;
+
 }
 .tableRow{
     flex-grow: 1;
