adjust nav bar font size color

--- a/client/src/modules/components/navbar.scss
+++ b/client/src/modules/components/navbar.scss
@@ -1,6 +1,6 @@
 .navlinks {
   text-decoration: none !important;
-  font-weight: 500;
+  font-weight: 600;
   color: white;
 }
 
@@ -9,7 +9,7 @@
 }
 
 .navlinks.active-navlinks:hover {
-  color: #444 !important;
+  color: #333c4e!important;
 }
 
 .active-navlinks {
