add study as default

--- a/client/src/modules/home/home.scss
+++ b/client/src/modules/home/home.scss
@@ -14,8 +14,8 @@
 }
 
 .cover-image {
-  background-attachment: local;
-    background-position: 50%;
+  background-attachment:initial;
+    background-position: 30%;
     background-repeat: no-repeat;
     background-size:cover;
 }
