--- a/client/src/styles/overrides.scss
+++ b/client/src/styles/overrides.scss
@@ -61,6 +61,8 @@ div svg path {
   background-image:none;
   font-size: small;
   padding: 0 0;
+  text-align: right;
+  display: block;
 }
 .accordion-button::before {
   content: "+";
