--- a/client/src/styles/overrides.scss
+++ b/client/src/styles/overrides.scss
@@ -47,11 +47,11 @@ div svg path {
 
 
 .accordion-item {
-  --bs-accordion-border-color: none
+  --bs-accordion-border-color:none //rgb(240, 240, 240);
 }
 .accordion-body {
-  background-color: rgb(248, 248, 248) !important;
-    ;
+  background-color: rgb(255, 255, 255) !important;
+  --bs-accordion-border-color:red
 }
 .accordion-header{
   background-color:#ffffff;
