--- a/client/src/modules/components/summaryChart/CNV/css/circos.css
+++ b/client/src/modules/components/summaryChart/CNV/css/circos.css
@@ -46,9 +46,9 @@
     /* width: 800px;
     height: 800px; */
     top: 100;
-    right: 0%;
+    /*right: 0%;*/
     bottom: 10;
-    left: 9%; 
+    /*left: 9%; */
    
 }
 .overlayX2 {
