--- a/client/src/styles/bootstrap-variables.scss
+++ b/client/src/styles/bootstrap-variables.scss
@@ -4,6 +4,8 @@ $blue: rgb(24, 83, 148);
 /** Headings */
 $headings-font-weight: 700;
 $headings-margin-bottom: 0;
+$headings-font-family: Poppins, "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif, serif;
+$font-family-sans-serif: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 
 /** Buttons */
 $btn-font-weight: 500;
