--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -5,4 +5,6 @@
 @import "~swagger-ui-react/swagger-ui.css";
 @import "./swagger-ui.theme.scss";
 @import "./overrides.scss";
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Open%20Sans:bold,bolditalic|Poppins:bold,bolditalic&display=swap");
+
+//@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap");
