--- a/client/public/css/ncids.css
+++ b/client/public/css/ncids.css
@@ -1,3 +1,84 @@
+.usa-banner__header-text,
+.usa-banner__header-text:before {
+    display: flex;
+    margin-right: .75rem;
+    width: 100%;
+}
+.usa-banner {
+    font-size: .82rem;
+    padding-bottom: 0;
+}
+.usa-banner__inner {
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 87.5rem;
+    min-height: 1.89rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+.usa-banner__inner {
+    padding-left: 2rem;
+    padding-right: 2rem;
+}
+.usa-banner {
+background-color: #f0f0f0;
+font-family: Open Sans,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
+font-size: 1.01rem;
+line-height: 1.6;
+}
+.usa-banner__header {
+    min-height: 0;
+}
+.usa-banner__header {
+    font-size: .76rem;
+    font-weight: 400;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 87.5rem;
+    min-height: 3rem;
+    padding-bottom: .5rem;
+    padding-top: .5rem;
+    position: relative;
+}
+
+.usa-banner__header-text {
+    font-size: .76rem;
+    line-height: 1.2;
+    margin-bottom: 0;
+    margin-top: 0;
+}
+.usa-banner__header-text,
+.usa-banner__header-text:before {
+    display: flex;
+    margin-right: .75rem;
+    width: 100%;
+}
+.usa-banner__header-text:before {
+    background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAEAAAAAsCAIAAABaPSmoAAAABGdBT…7BA3IHyJzXhRNyRIC+oI3Agj/3DMZx2ddTqEHWyJDdI/AHdI1y3pPhjf8AAAAASUVORK5CYII=);
+    background-size: 16px 11px;
+    content: "";
+    display: block;
+    height: 11px;
+    max-width: 16px;
+}
+.usa-banner__header {
+    font-size: .76rem;
+    font-weight: 400;
+}
+.usa-banner {
+    font-family: Open Sans, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
+    font-size: 1.01rem;
+    line-height: 1.6;
+}
+
+
+
 .nci-header--extended .nci-header__navbar {
     align-items: center;
     display: flex;
