adjust fisher table

--- a/client/src/modules/components/summaryChart/CNV/css/circos.css
+++ b/client/src/modules/components/summaryChart/CNV/css/circos.css
@@ -228,4 +228,10 @@
     vertical-align: middle;
 }
 
+.fisherTable .numberCol{
+    text-align: center;
+    font-size: smaller;
+    vertical-align: middle;
+}
+
 
