--- a/client/src/styles/overrides.scss
+++ b/client/src/styles/overrides.scss
@@ -123,4 +123,25 @@ div svg path {
   box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.25);
 }
 
+.usa-banner__header {
+  font-size: .76rem;
+  font-weight: 400;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 87.5rem;
+  min-height: 3rem;
+  padding-bottom: 0.5rem;
+  padding-top: 0.5rem;
+  position: relative;
+}
+
+
+.usa-banner__header-text:before {
+  background-image: url('../../public/assets/images/usa_banner.png');
+  background-size: 16px 11px;
+  content: "";
+  display: block;
+  height: 11px;
+  max-width: 16px;
+}
 
