--- a/client/src/styles/overrides.scss
+++ b/client/src/styles/overrides.scss
@@ -126,16 +126,31 @@ div svg path {
 .usa-banner__header {
   font-size: .76rem;
   font-weight: 400;
-  margin-left: auto;
+  margin-left: 5rem;
   margin-right: auto;
   max-width: 87.5rem;
   min-height: 3rem;
   padding-bottom: 0.5rem;
   padding-top: 0.5rem;
   position: relative;
+  text-align: left; /* Align the text to the left */
+
 }
 
-
+.usa-banner__inner {
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 87.5rem;
+  min-height: 1.89rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
 .usa-banner__header-text:before {
   background-image: url('../../public/assets/images/usa_banner.png');
   background-size: 16px 11px;
