--- a/client/public/css/ncids.css
+++ b/client/public/css/ncids.css
@@ -8,20 +8,7 @@
     font-size: .82rem;
     padding-bottom: 0;
 }
-.usa-banner__inner {
-    align-items: center;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    flex-wrap: nowrap;
-    justify-content: space-between;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 87.5rem;
-    min-height: 1.89rem;
-    padding-left: 1rem;
-    padding-right: 1rem;
-}
+
 .usa-banner__inner {
     padding-left: 2rem;
     padding-right: 2rem;
@@ -35,17 +22,7 @@ line-height: 1.6;
 .usa-banner__header {
     min-height: 0;
 }
-.usa-banner__header {
-    font-size: .76rem;
-    font-weight: 400;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 87.5rem;
-    min-height: 3rem;
-    padding-bottom: .5rem;
-    padding-top: .5rem;
-    position: relative;
-}
+
 
 .usa-banner__header-text {
     font-size: .76rem;
@@ -59,14 +36,7 @@ line-height: 1.6;
     margin-right: .75rem;
     width: 100%;
 }
-.usa-banner__header-text:before {
-    background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAEAAAAAsCAIAAABaPSmoAAAABGdBT…7BA3IHyJzXhRNyRIC+oI3Agj/3DMZx2ddTqEHWyJDdI/AHdI1y3pPhjf8AAAAASUVORK5CYII=);
-    background-size: 16px 11px;
-    content: "";
-    display: block;
-    height: 11px;
-    max-width: 16px;
-}
+
 .usa-banner__header {
     font-size: .76rem;
     font-weight: 400;
@@ -77,6 +47,43 @@ line-height: 1.6;
     line-height: 1.6;
 }
 
+
+.usa-banner__header {
+    font-size: .76rem;
+    font-weight: 400;
+    margin-left: 5rem;
+    margin-right: auto;
+    max-width: 87.5rem;
+    min-height: 3rem;
+    padding-bottom: 0.5rem;
+    padding-top: 0.5rem;
+    position: relative;
+    text-align: left; /* Align the text to the left */
+  
+  }
+  
+  .usa-banner__inner {
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 87.5rem;
+    min-height: 1.89rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+  .usa-banner__header-text:before {
+    background-image: url('../assets/images/usa_banner.png');
+    background-size: 16px 11px;
+    content: "";
+    display: block;
+    height: 11px;
+    max-width: 16px;
+  }
 
 
 .nci-header--extended .nci-header__navbar {
