--- a/client/public/css/ncids.css
+++ b/client/public/css/ncids.css
@@ -200,9 +200,25 @@ line-height: 1.6;
     margin-bottom: 2rem;
     padding-top: 2rem;
     border-bottom: none;
-   
     
 }
+
+.navbar-light .navbar-nav .nav-link
+ {
+font-family: Poppins,Helvetica Neue,Helvetica,Roboto,Arial,sans-serif,serif !important;
+font-weight:600;
+
+}
+
+
+.navbar-light .navbar-nav .nav-link.active,
+.navbar-light .navbar-nav .nav-link:hover {
+  border-bottom: solid #007bbd !important; /* Color of the border */
+  border-width: 0 0 4px !important; /* Top, right, and left border set to 0, bottom border set to desired thickness */
+  display: inline-block !important; /* Ensure the border wraps tightly around the text */
+}
+
+
 
 .usa-footer {
     font-family: Open Sans, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
