--- a/client/public/css/ncids.css
+++ b/client/public/css/ncids.css
@@ -226,16 +226,13 @@ font-weight:600;
     line-height: 1.6;
     
 }
-.usa-footer>.grid-container {
-    padding-left: 0rem;
-    padding-right: 0rem;
-}
-.usa-footer>.grid-container {
+
+.usa-footer>.grid-footer-container {
     margin-left: auto;
     margin-right: auto;
 
-    padding-left: 0rem;
-    padding-right: rem;
+    padding-left: 6rem;
+    padding-right: 6rem;
 }
 .usa-footer__return-to-top {
     line-height: 1;
@@ -245,11 +242,11 @@ font-weight:600;
 .usa-footer--nci-big .usa-footer__primary-section {
     background-color: #004971;
 }
-.usa-footer__primary-section>.grid-container {
-    padding-left: 7rem;
-    padding-right: 7rem;
+.usa-footer__primary-section>.grid-footer-container {
+    padding-left: 6rem;
+    padding-right: 6rem;
     margin-left: auto;
-        margin-right: auto;
+    margin-right: auto;
        
 }
 .usa-footer--nci-big .usa-footer__primary-link,
@@ -386,7 +383,7 @@ font-weight:600;
     padding-bottom: 1.25rem;
     padding-top: 1.25rem;
 }
-.usa-footer__secondary-section>.grid-container {
+.usa-footer__secondary-section>.grid-footer-container {
     padding-left: 6rem;
     padding-right: 6rem;
     margin-left: auto;
