make logo align with the navbar

--- a/client/src/styles/overrides.scss
+++ b/client/src/styles/overrides.scss
@@ -148,5 +148,9 @@ div svg path {
 }
 
 .navbar-light .navbar-nav .nav-link{
-  font-size: 1.08rem !important;
+  font-size: 1.1rem !important;
+}
+
+.nci-logo{
+margin-left: 4.5rem;
 }
