--- a/client/public/css/ncids.css
+++ b/client/public/css/ncids.css
@@ -554,3 +554,6 @@ font-weight:600;
 .usa-footer__return-to-top a:focus{outline:.25rem solid #2491ff;outline-offset:0}
 
 
+.ml-3_5{
+ margin-left: 3.5rem;
+}
