--- a/client/public/css/ncids.css
+++ b/client/public/css/ncids.css
@@ -1,3 +1,17 @@
+
+/* Specify Poppins font for headings */
+h1, h2, h3, h4, h5, h6 {
+    font-family: Poppins, "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif, serif; /* Use Poppins font */
+    font-weight: 600 !important; /* Use 600 weight for bold */
+  }
+  
+  /* Specify Open Sans font for body text */
+  body {
+    font-family:"Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  }
+  
+
+
 .usa-banner__header-text,
 .usa-banner__header-text:before {
     display: flex;
@@ -557,3 +571,20 @@ font-weight:600;
 .ml-3_5{
  margin-left: 3.5rem;
 }
+
+/* For desktop screens */
+@media (min-width: 992px) {
+    .nci-logo img {
+      height: 50px;
+      max-width:100%;
+    }
+  }
+  
+  /* For tablet and mobile screens */
+  @media (max-width: 991px) {
+    .nci-logo img {
+      height: 38px;
+      max-width: 100%;
+    }
+  }
+  
