--- a/client/src/modules/components/summaryChart/CNV/css/circos.css
+++ b/client/src/modules/components/summaryChart/CNV/css/circos.css
@@ -250,4 +250,57 @@
     margin: 0px;
 }
 
+.tooltip-container {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .tooltip-trigger {
+    cursor: pointer;
+  }
+  
+  .tooltip-box {
+    position: absolute;
+    left: 50%;
+    top: 120%;
+    transform: translateX(-50%);
+    border: 1px solid gray;
+    border-radius: 4px;
+    max-width: 500px;
+    min-width: 300px;
+    z-index: 1000;
+    background: white;
+    padding: 4px 8px;
+    font-size: 10px;
+    /* top:100%; */
+    /* margin-top: 8px;
+    padding: 4px 8px;
+    font-size: 10px;
+    color: black;
+    background: white;
+    text-align: center;
+    visibility: visible;
+    opacity: 1;
+    transition: opacity 0.5s;
+    white-space: wrap;
+    max-width: 500px;
+    min-width: 300px;
+    display: inline-block;
+    border: 1px solid gray;
+    border-radius: 4px;
+    white-space: normal;
+    word-wrap: break-word;
+    justify-content: center;
+    align-items: center;
+    transition: opacity 0.5s, visibility 0.5s;
+    z-index: 1000;
+    box-sizing: border-box;
+  } */
+}
+
+  .tooltip-trigger:hover .tooltip-box{
+    visibility: visible;
+    opacity: 1;
+  }
+
 
