--- a/client/public/css/ncids.css
+++ b/client/public/css/ncids.css
@@ -634,3 +634,18 @@ font-weight:600;
         display: block;
     }
 }
+
+.custom-blue-button {
+    background-color: #185394 !important;
+    color: white !important;
+    border: 1px solid #185394 !important;
+    transition: background-color 0.3s ease, color 0.3s ease, border-color 0.3s ease !important;
+}
+
+.custom-blue-button:hover {
+    background-color: white !important;
+    color: black !important;
+    border: 1px solid black !important;
+}
+
+
